<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="description">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="error_email">Masukkan Email Yang Valid</string>
    <string name="image_welcome">image_welcome</string>
    <string name="image_signup">image_signup</string>
    <string name="add_story">add_story</string>
    <string name="image_story">image_story</string>
    <string name="image_login">image_login</string>
    <string name="alert_error">Sorry!</string>
    <string name="alert_error_btn_positive">Try Again</string>
    <string name="alert_success">Yeah!</string>
    <string name="alert_success_btn_negative">Close</string>
    <string name="alert_success_btn_positive">Login Now</string>
    <string name="alert">Alert</string>
    <string name="alert_message_logout">Apakah anda yakin untuk log out.?</string>
    <string name="alert_logout_negative_button">No</string>
    <string name="alert_logout_positive_button">Yes</string>
    <string name="no_media_selected">No media selected</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Tampilkan Maps</string>
    <string name="retry">Coba Lagi</string>
</resources>