<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/image_story"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/example_banner"
            android:contentDescription="@string/image_story" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/image_story" />

        <TextView
            android:id="@+id/name_story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@id/image_story"
            card_view:layout_constraintStart_toStartOf="@id/image_story"
            card_view:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/desc_story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="@id/name_story"
            card_view:layout_constraintStart_toStartOf="@id/name_story"
            card_view:layout_constraintTop_toBottomOf="@id/name_story"
            tools:text="@string/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>